--- a/.gitignore
+++ b/.gitignore
@@ -546,4 +546,4 @@ MigrationBackup/
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,linux,macos,visualstudio,visualstudiocode,node
 
-/bot/config.json
+/Bot/config.json
