--- a/Bot/configs/bedrock_server.config.json
+++ b/Bot/configs/bedrock_server.config.json
@@ -1,4 +1,5 @@
 {
+    "node_server_ip": "192.168.1.40",
     "server_ip": "192.168.1.7",
     "ssh_user": "jackson",
     "bedrock_process_path": "c:/Users/Jackson/Desktop/Minecraft_Server/Survival/bedrock_server.exe",
